--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Run tests
         run: crystal spec
       - name: Build
-        run: crystal build src/org_mob_parser.cr
+        run: crystal build src/parser.cr
       - name: Check formatting
         run: crystal tool format --check
