--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,17 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Crystal
         uses: crystal-lang/install-crystal@v1
-      - name: Run tests
-        run: crystal spec
       - name: Build
         run: crystal build src/parser.cr
+  specs:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Run tests
+        run: crystal spec
+  format:
+    runs-on: ubuntu
+    needs: [specs]
+    steps:
       - name: Check formatting
         run: crystal tool format --check
